upd websocket address for mdt

--- a/server/server.prod.cfg
+++ b/server/server.prod.cfg
@@ -44,4 +44,4 @@ exec ./config/resources.cfg
 exec ./config/voice.cfg
 exec ./config/prod.logs.cfg
 
-set WS_MDT_ALERTS ""
+set WS_MDT_ALERTS "http://localhost:4002/mdt-alerts"
