--- a/server/example.server.ptr.cfg
+++ b/server/example.server.ptr.cfg
@@ -33,3 +33,5 @@ exec ./config/core.ptr.cfg
 exec ./config/admins.cfg
 exec ./config/resources.cfg
 exec ./config/voice.cfg
+
+set WS_MDT_ALERTS "http://localhost:4002/mdt-alerts"
