--- a/server/resources/[sandbox]/sandbox-mdt/ui/package.json
+++ b/server/resources/[sandbox]/sandbox-mdt/ui/package.json
@@ -8,7 +8,6 @@
 		"build": "cross-env NODE_ENV=production webpack --config webpack/webpack.prod.js --color --progress"
 	},
 	"dependencies": {
-		"mythic-ckeditor": "file:local_package\\mythic-ckeditor",
 		"@babel/plugin-proposal-class-properties": "^7.18.6",
 		"@ckeditor/ckeditor5-build-classic": "^33.0.0",
 		"@ckeditor/ckeditor5-react": "^4.0.1",
@@ -28,6 +27,7 @@
 		"html-react-parser": "^1.2.8",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
+		"mythic-ckeditor": "file:local_package\\mythic-ckeditor",
 		"prop-types": "^15.7.2",
 		"qs": "^6.10.1",
 		"react": "^18.0.0",
@@ -50,6 +50,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.15.0",
+		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
 		"@babel/polyfill": "^7.12.1",
 		"@babel/preset-env": "^7.15.0",
 		"@babel/preset-react": "^7.14.5",
