--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ server/created_doors_data.txt
 
 coord-line/
 server/resources/\[sandbox\]/sandbox-pwnzor2/pac.db
+server/config/database.cfg
+artifacts/
