--- a/server/server.cfg
+++ b/server/server.cfg
@@ -13,7 +13,7 @@ sv_endpointPrivacy true
 sv_scriptHookAllowed 0
 
 ## DO NOT EDIT ##
-sv_licenseKey ""
+sv_licenseKey "YOUR LICENSE KEY HERE"
 sv_tebexSecret
 sv_hostname "SandboxRP"
 sets discord "https://discord.gg/sandboxgg"
