--- a/server.cfg
+++ b/server.cfg
@@ -13,7 +13,7 @@ sv_endpointPrivacy true
 sv_scriptHookAllowed 0
 
 ## DO NOT EDIT ##
-sv_licenseKey "YOUR LICENSE KEY HERE"
+sv_licenseKey "cfxk_18d4JkjuR29ENrwdWJG2G_2ycoEg"
 sv_tebexSecret
 sv_hostname "SandboxRP"
 sets discord "https://discord.gg/sandboxgg"
@@ -24,7 +24,7 @@ sets locale "en-US"
 load_server_icon logo.png
 sets banner_detail "https://i.ibb.co/Tm01NWq/banner.png"
 sets banner_connecting "https://i.ibb.co/Tm01NWq/banner.png"
-set sv_enforceGameBuild 2699
+set sv_enforceGameBuild 3095
 #sets sv_pureLevel 1
 set SERVER_TYPE "prod"
 
