fix original loadscreen (react)

--- a/config/resources.cfg
+++ b/config/resources.cfg
@@ -8,10 +8,9 @@
 	# ensure hardcap
 	# ensure baseevents
 	ensure fivem-map-hipster
-	ensure loadscreen
 
 # Core Resources
-	# ensure sandbox-loadscreen
+	ensure sandbox-loadscreen
 	ensure sandbox-base
 	ensure sandbox-queue
 	ensure sandbox-pwnzor
