--- a/config/logs.cfg
+++ b/config/logs.cfg
@@ -6,3 +6,4 @@ set discord_pwnzor_webhook "#"
 set discord_error_webhook "#"
 set discord_donation_webhook "#"
 set discord_loot_webhook "#"
+set discord_creator_webhook "#"
